package prenda.material;

public enum Material {
    CUERO,
    JEAN
}
