package prenda.material;

public enum Trama {
    LISA,
    RAYADA,
    LUNARES,
    CUADROS,
    ESTAMPADA
}
