package prenda.tipoDePrenda;

public enum Categoria {
    PARTE_SUPERIOR,
    PARTE_INFERIOR,
    CALZADO,
    ACCESORIOS
}
