package prenda.tipoDePrenda;

public enum Tipo {
    ZAPATOS,
    CAMISA_MANGA_CORTA,
    PANTALON,
}
