@startuml
class Borrador {
    tipoDePrenda
    colorPrincipal
    colorSecundario
    material
    trama
    crearPrenda()
}

class Prenda {
    tipoDePrenda
    colorPrincipal
    colorSecundario
    material
    trama
}

class TipoDePrenda {
    tipo
    categoria
}

enum Tipo {
    ZAPATOS
    CAMISA_MANGA_CORTA
    PANTALON
}

enum Categoria {
    PARTE_SUPERIOR,
    CALZADO,
    PARTE_INFERIOR,
    ACCESORIOS
}

enum Material {
    CUERO
    JEAN
}

enum Trama {
    LISA,
    RAYADA,
    LUNARES,
    CUADROS,
    ESTAMPADA
}

Prenda --> TipoDePrenda
Prenda --> Material
Prenda --> Trama

Borrador --> TipoDePrenda
Borrador --> Material
Borrador --> Trama
Borrador ..> Prenda

TipoDePrenda --> Tipo
TipoDePrenda --> Categoria


'============= UNIFORME ===============
class Uniforme {
    superior
    inferior
    calzado
    institucion

    Uniforme(superior, inferior, calzado, institucion)
}

class Usuario {
    obtenerSugerencia()
}

Uniforme <.. Prenda
Usuario <.. Uniforme
@enduml